<Feat> 모집글 거래 과정 단순화
